--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ul li:not(:last-child)::after {
+  content: "";
+  margin-left: 1rem;
+  color: #a0aec0; /* gris clair */
+}
